# airo-tulip

./: .gitignore  .pre-commit-config.yaml  README.md  install.sh  main.py  pyproject.toml  test-kalman.py  test-water-pour.py  test.py  velocity_platform_controller.py
airo-tulip/: CHANGELOG.md  README.md  publish_pypi.sh  pyproject.toml  requirements.txt  setup.py  virtual_display.md
airo-tulip/airo_tulip/: ethercat.py  ethercat_master.py  peripheral_client.py  platform_driver.py  platform_monitor.py  robile_platform.py  structs.py  util.py
airo-tulip/airo_tulip/api/: client.py  cyclone_participant.py  messages.py  server.py
airo-tulip/airo_tulip/controllers/: compliant_controller.py  compliant_platform_controller.py  velocity_platform_controller.py
airo-tulip/airo_tulip/hardware/: peripheral_client.py  platform_driver.py  platform_monitor.py  robile_platform.py
airo-tulip/airo_tulip/hardware/controllers/: controller.py  velocity_platform_controller.py
airo-tulip/airo_tulip/hardware/logging/: monitor_rerun.py
airo-tulip/airo_tulip/logging/: monitor_rerun.py
airo-tulip/airo_tulip/server/: client.py  kelo_robile.py  messages.py  server.py
airo-tulip/docs/: external_devices.md  how_it_works.md  kelo_setup.md  rerun.md  virtual_display.md
airo-tulip/examples/: compliant_mode.py  position_control.py  velocity_mode.py
airo-tulip/scripts/: drake_visualisation_urdf.py  monitor_position.py  test_client.py  test_compliant_controller.py  test_compliant_driver.py  test_joystick.py  test_kelo_robile.py  test_kelo_robile_compliant.py  test_platform_monitor.py  test_server.py  test_velocity_platform_controller.py
airo_tulip/: ethercat_master.py  structs.py  test.py  velocity_platform_controller.py
airo_tulipy/: CMakeLists.txt  README.md
airo_tulipy/include/: PlatformDriver.h  tulipy.h
airo_tulipy/src/: PlatformDriver.cpp  tulipy.cpp
airo_tulipy/src/kelo_tulip/soem/: CMakeLists.txt
dashboard/: README.md  pyproject.toml
dashboard/airo_tulip_dashboard/: example_client.py  handlers.py  server.py
dashboard/tulip_dashboard/: server.py
kelo-tulip/include/kelo_tulip/: PlatformDriver.h
kelo-tulip/include/kelo_tulip/modules/: RobileMasterBattery.h  RobileMasterBatteryROS.h
kelo-tulip/include/kelo_tulip/soem/oshw/vxworks/: nicdrv.c  oshw.h
kelo-tulip/src/: EtherCATMaster.cpp  TulipMain.cpp
kelo-tulip/src/soem/: ethercatconfig.c  ethercatmain.c
kelo_tulip/config/: example.yaml
kelo_tulip/include/kelo_tulip/: EtherCATMaster.h  EtherCATModule.h  EtherCATModuleROS.h  KeloDriveAPI.h  PlatformDriverROS.h  VelocityPlatformController.h  WheelConfig.h  WheelModel.h
kelo_tulip/include/kelo_tulip/soem/osal/vxworks/: osal.c
kelo_tulip/src/: PlatformDriver.cpp  PlatformDriverROS.cpp  VelocityPlatformController.cpp
kelo_tulip/src/modules/: RobileMasterBattery.cpp  RobileMasterBatteryROS.cpp
kelo_tulip/src/soem/: CMakeLists.txt  ethercateoe.c
kelo_tulip/src/soem/oshw/rtems/: nicdrv.c
kelo_tulip/src/soem/oshw/vxworks/: nicdrv.h
peripherals/: README.md  flow_test.ino  peripherals_client.py  peripherals_client_test.py
peripherals/peripherals_server/: peripherals_server.ino
peripherals/peripherals_server_teensy/: peripherals_server_teensy.ino
tulipy/: ethercat.py  ethercat_master.py  init_ethercat.py  kelo_drive_api.py  platform_driver.py  platform_monitor.py  robile_platform.py  structs.py  test.py  util.py  velocity_platform_controller.py
utils/: create_virtual_display.sh  cyclone_config.xml  start_dashboard.py  start_dashboard.sh  start_server.sh  start_tulip.py  start_tulip.sh  start_ur.py  start_ur.sh  stop_ur.py  stop_ur.sh
