[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "airo-tulip-dashboard"
version = "0.0.1"
authors = [
  { name = "Mathieu De Coster", email = "mathieu.decoster@ugent.be" },
]
description = "Dashboard server for KELO robots running airo-tulip."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

dependencies = ["loguru>=0.7.2"]

[project.urls]
Homepage = "https://github.com/airo-ugent/airo-tulip"
Issues = "https://github.com/airo-ugent/airo-tulip/issues"

[tools.setuptools]
packages = ["tulip_dashboard"]
